{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 31,
  "lineage": "528c7983-495e-4656-b8c5-286d6d90f80a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vprofile-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fb0b8c1424f266b",
            "arn": "arn:aws:ec2:us-east-2:986868443354:instance/i-08e297e48de91184c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08e297e48de91184c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vprofilekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-015743ccdea767a4d",
            "private_dns": "ip-172-21-1-106.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.21.1.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05953174f6241395f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ac14aa9c876689d",
            "tags": {
              "Name": "vprofile-bastion",
              "PROJECT": "vprofile"
            },
            "tags_all": {
              "Name": "vprofile-bastion",
              "PROJECT": "vprofile"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09ace081114d71140"
            ]
          },
          "dependencies": [
            "aws_db_instance.vprofile-rds",
            "aws_db_subnet_group.vprofile-rds-subgrp",
            "aws_key_pair.vprofilekey",
            "aws_security_group.vprofile-backend-sg",
            "aws_security_group.vprofile-bastion-sg",
            "aws_security_group.vprofile-prod-sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vprofile-backend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986868443354:security-group/sg-07cb6f17e3335752a",
            "description": "security group for RDS, active mq, elastic cache",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07cb6f17e3335752a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0c5aa6b220d57bbef"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "vprofile-backend-sg",
            "name_prefix": "",
            "owner_id": "986868443354",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-002d7a20051df4f24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vprofile-bastion-sg",
            "aws_security_group.vprofile-prod-sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vprofile-bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986868443354:security-group/sg-09ace081114d71140",
            "description": "security group for bastion ec2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ace081114d71140",
            "ingress": [
              {
                "cidr_blocks": [
                  "64.108.104.52/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vprofile-bastion-sg",
            "name_prefix": "",
            "owner_id": "986868443354",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-002d7a20051df4f24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vprofile-bean-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986868443354:security-group/sg-0766e2da64f81da50",
            "description": "security group for bean-elb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0766e2da64f81da50",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vprofile-bean-elb-sg",
            "name_prefix": "",
            "owner_id": "986868443354",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-002d7a20051df4f24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vprofile-prod-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986868443354:security-group/sg-0c5aa6b220d57bbef",
            "description": "security group for beanstalk instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5aa6b220d57bbef",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09ace081114d71140"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vprofile-prod-sg",
            "name_prefix": "",
            "owner_id": "986868443354",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-002d7a20051df4f24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vprofile-bastion-sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sec_group_allow_to_itself",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 0,
            "id": "sgrule-1825746912",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07cb6f17e3335752a",
            "security_group_rule_id": "sgr-032d5322e199f98e6",
            "self": false,
            "source_security_group_id": "sg-07cb6f17e3335752a",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vprofile-backend-sg",
            "aws_security_group.vprofile-bastion-sg",
            "aws_security_group.vprofile-prod-sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986868443354:network-acl/acl-0b01d7ed00ea5eb9c",
            "default_network_acl_id": "acl-0b01d7ed00ea5eb9c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b01d7ed00ea5eb9c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "986868443354",
            "subnet_ids": [
              "subnet-00ac14aa9c876689d",
              "subnet-0148d8b1db9620586",
              "subnet-0282310d508d3f919",
              "subnet-06d3580925b1874ed",
              "subnet-09aa890539fca9f83",
              "subnet-0e1ff6fc1a10d781c"
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-002d7a20051df4f24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986868443354:route-table/rtb-07cf1dab551309a65",
            "default_route_table_id": "rtb-07cf1dab551309a65",
            "id": "rtb-07cf1dab551309a65",
            "owner_id": "986868443354",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-002d7a20051df4f24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986868443354:security-group/sg-06b323cb690c2afa6",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06b323cb690c2afa6",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "986868443354",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-002d7a20051df4f24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a657143fbfe802b0",
            "association_id": "eipassoc-00aa82bb00c1f545e",
            "domain": "vpc",
            "id": "eipalloc-0a657143fbfe802b0",
            "network_border_group": "us-east-2",
            "network_interface": "eni-06c7bba310d8d60fc",
            "private_dns": "ip-172-21-1-182.us-east-2.compute.internal",
            "private_ip": "172.21.1.182",
            "public_dns": "ec2-3-129-108-69.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.108.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986868443354:internet-gateway/igw-0bf0afdfe7036779d",
            "id": "igw-0bf0afdfe7036779d",
            "owner_id": "986868443354",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC",
              "Terraform": "true"
            },
            "vpc_id": "vpc-002d7a20051df4f24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a657143fbfe802b0",
            "association_id": "eipassoc-00aa82bb00c1f545e",
            "connectivity_type": "public",
            "id": "nat-06a52aed4ef874219",
            "network_interface_id": "eni-06c7bba310d8d60fc",
            "private_ip": "172.21.1.182",
            "public_ip": "3.129.108.69",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00ac14aa9c876689d",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0139a77370a3fcecd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06a52aed4ef874219",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0139a77370a3fcecd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bf0afdfe7036779d",
            "id": "r-rtb-0e45796564ba8dd1d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e45796564ba8dd1d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986868443354:route-table/rtb-0139a77370a3fcecd",
            "id": "rtb-0139a77370a3fcecd",
            "owner_id": "986868443354",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06a52aed4ef874219",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-002d7a20051df4f24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986868443354:route-table/rtb-0e45796564ba8dd1d",
            "id": "rtb-0e45796564ba8dd1d",
            "owner_id": "986868443354",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf0afdfe7036779d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-002d7a20051df4f24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d09c4aa063f34f33",
            "route_table_id": "rtb-0139a77370a3fcecd",
            "subnet_id": "subnet-06d3580925b1874ed"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c717d2d386f5f17d",
            "route_table_id": "rtb-0139a77370a3fcecd",
            "subnet_id": "subnet-09aa890539fca9f83"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0128c2b2ad01764d2",
            "route_table_id": "rtb-0139a77370a3fcecd",
            "subnet_id": "subnet-0282310d508d3f919"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055d17b3ef3c2d79d",
            "route_table_id": "rtb-0e45796564ba8dd1d",
            "subnet_id": "subnet-00ac14aa9c876689d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9f7f1df93a6f0ef",
            "route_table_id": "rtb-0e45796564ba8dd1d",
            "subnet_id": "subnet-0e1ff6fc1a10d781c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047708f622490c0c8",
            "route_table_id": "rtb-0e45796564ba8dd1d",
            "subnet_id": "subnet-0148d8b1db9620586"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986868443354:subnet/subnet-06d3580925b1874ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.21.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d3580925b1874ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986868443354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-002d7a20051df4f24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986868443354:subnet/subnet-09aa890539fca9f83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.21.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09aa890539fca9f83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986868443354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-002d7a20051df4f24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986868443354:subnet/subnet-0282310d508d3f919",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.21.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0282310d508d3f919",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986868443354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-private-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-private-us-east-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-002d7a20051df4f24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986868443354:subnet/subnet-00ac14aa9c876689d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.21.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ac14aa9c876689d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986868443354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-002d7a20051df4f24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986868443354:subnet/subnet-0e1ff6fc1a10d781c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.21.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1ff6fc1a10d781c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986868443354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-public-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-public-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-002d7a20051df4f24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986868443354:subnet/subnet-0148d8b1db9620586",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.21.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0148d8b1db9620586",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986868443354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-public-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-public-us-east-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-002d7a20051df4f24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986868443354:vpc/vpc-002d7a20051df4f24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-0b01d7ed00ea5eb9c",
            "default_route_table_id": "rtb-07cf1dab551309a65",
            "default_security_group_id": "sg-06b323cb690c2afa6",
            "dhcp_options_id": "dopt-02956f28e7549c4e3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-002d7a20051df4f24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07cf1dab551309a65",
            "owner_id": "986868443354",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}